[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dpulse"
version = "1.2"
description = "Convenient,fast and user-friendly collector of domain information from Open-Sources"
authors = ["OSINT-TECHNOLOGIES <osint.technologies@gmail.com>"]
readme = "README.md"
license = "MIT License"
homepage = "https://pypi.org/manage/projects/dpulse"
repository = "https://github.com/OSINT-TECHNOLOGIES/dpulse"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English"
]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.5"
MarkupSafe = "2.1.5"
beautifulsoup4 = "4.12.2"
certifi = ">=2024.07.04"
charset-normalizer = "3.3.2"
idna = "3.7"
requests = "2.32.3"
soupsieve = "2.5"
urllib3 = "2.2.2"
python-whois = "0.9.4"
colorama = "0.4.6"
pyfiglet = "1.0.2"
rich = "13.7.1"
MechanicalSoup = "1.3.0"
builtwith = "1.3.4"
dnspython = "2.6.1"
lxml = "5.2.2"
openpyxl = "3.1.2"
PyMuPDF = "1.24.7"

[tool.poetry.scripts]
dpulse = 'dpulse.dpulse:run'
