[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dpulse"
version = "1.3.1"
description = "Convenient,fast and user-friendly collector of domain information from Open-Sources"
authors = ["OSINT-TECHNOLOGIES <osint.technologies@gmail.com>"]
readme = "README.md"
license = "MIT License"
homepage = "https://pypi.org/manage/projects/dpulse"
repository = "https://github.com/OSINT-TECHNOLOGIES/dpulse"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Jinja2 = "^3.1.6"
beautifulsoup4 = "4.12.2"
requests = "2.32.3"
python-whois = "0.9.4"
colorama = "0.4.6"
pyfiglet = "1.0.2"
rich = "13.7.1"
builtwith = "1.3.4"
dnspython = "2.6.1"
openpyxl = "3.1.2"
PyMuPDF = "1.24.7"
selenium = "4.28.1"
webdriver-manager = "4.0.2"

[tool.poetry.scripts]
dpulse = 'dpulse.dpulse:run'

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.0"

