[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpulse"
version = "1.5"
description = "Convenient, fast and user-friendly collector of domain information from Open-Sources"
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "MIT" }
authors = [
  { name = "OSINT-TECHNOLOGIES", email = "osint.technologies@gmail.com" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English"
]
dependencies = [
  "Jinja2>=3.1.6,<4.0.0",
  "beautifulsoup4>=4.12.2,<5.0.0",
  "requests>=2.32.4,<3.0.0",
  "python-whois>=0.9.4,<0.10.0",
  "colorama>=0.4.6,<0.5.0",
  "pyfiglet>=1.0.2,<2.0.0",
  "rich>=13.7.1,<14.0.0",
  "MechanicalSoup>=1.3.0,<2.0.0",
  "builtwith>=1.3.4,<2.0.0",
  "dnspython>=2.6.1,<3.0.0",
  "PyMuPDF>=1.26.6,<2.0.0",
  "selenium>=4.28.1,<5.0.0",
  "webdriver-manager>=4.0.2,<5.0.0",
  "undetected_chromedriver>=3.5.5,<4.0.0"
]

[project.urls]
Homepage = "https://github.com/OSINT-TECHNOLOGIES/dpulse"
Repository = "https://github.com/OSINT-TECHNOLOGIES/dpulse"

[project.scripts]
dpulse = "dpulse:main"

[dependency-groups]
dev = [
  "deptry>=0.23.0,<0.24.0"
]

[tool.hatch.build]
include = [
  "__init__.py",
  "dpulse.py",
  "apis/**/*",
  "datagather_modules/**/*",
  "dorking/**/*",
  "pagesearch/**/*",
  "reporting_modules/**/*",
  "service/**/*",
  "snapshotting/**/*",
  "README.md"
]
